--- a/app/assets/stylesheets/refinery-glass.scss
+++ b/app/assets/stylesheets/refinery-glass.scss
@@ -1,891 +1,34 @@
-@import "partials/canvas";
+/******************************************************************************
+ *
+ *      ***** CSS Documentation for use with feast multi-site *****
+ *
+ * ***** SINGLE SITE *****
+ * application.css          BOTH                    refinery-glass.css*
+ *                          config/_variables
+ * _application-manifest                            glass/_manifest
+ *                          canvas/_other_stuff
+ *                          canvas/_other_stuff2
+ * partials/_other_stuff                            glass/_other_stuff
+ * partials/_other_stuff2                           glass/_other_stuff2
+ *
+ * * /admin UI includes both application.css & refinery-glass.css
+ *
+ *
+ *
+ *
+ * ***** FEAST MULTI-SITE *****
+ * application-<slug>.css   BOTH                    refinery-glass-<slug>.css
+ *                          config/_variables-<slug>
+ * _application-manifest                            glass/_manifest
+ *               --- same as single site from here down ---
+ *
+ * Result: you get:
+ *  - application-<slug>.css
+ *  - refinery-glass-<slug>.css
+ * For each different slug (org OR unique theme), these are dynamically
+ * included from in the <head>
+ *
+ ******************************************************************************/
 
-
-/* -------------------- TEMPORARY -------------------- */
-
-body p{
-  font-size: 16px;
-  line-height: 1.6em;
-}
-
-img.pull-left{
-  margin: 10px 10px 10px 0;
-}
-
-#article-cover{
-  background: url("/assets/home-cover.jpg") center center / cover no-repeat;
-	height: 500px;
-	padding-top: 120px;
-	width: 100%;
-	margin-bottom: 30px;
-}
-
-.btn.btn-edit-img {
-  padding-right: 6px;
-  i {
-    margin: 0;
-    padding: 10px 6px 9px 10px;
-    background-color: rgba(0,0,0,0.6);
-    border-radius: 20px;
-    -webkit-transition: 0.2s;
-    transition: 0.2s;
-    opacity: 0.6;
-  }
-  &:hover {
-    i {
-      opacity: 0.8;
-    }
-  }
-}
-
-#image-upload-form {
-  position: absolute;
-  top: -400px;
-}
-
-/* -------------------- MAIN -------------------- */
-
-body{
-  height: 100%;
-  background: lighten($off-white, 2%) !important;
-}
-
-
-/* -------------------- ELEMENTS -------------------- */
-
-.circle-icon{
-  @include circle(30px);
-  color: $black;
-  border: 1px solid $black;
-  display: inline-block;
-  text-align: center;
-  vertical-align: top;
-  &:link, &:visited {
-    color: $black;
-  }
-  &:hover, &:focus{
-    color: $white;
-    border-color: $primary-dark;
-    background: $primary-dark;
-  }
-}
-
-.circle-icon.fluid-width{
-  padding: 0 10px 0 10px;
-  min-width: 30px;
-  width: auto;
-  span{
-    padding-top: 2px;
-  }
-}
-
-
-
-/* -------------------- UI -------------------- */
-
-#site-bar{
-  min-height: 34px;
-  height: 34px;
-  background: $grey-9;
-  border: none;
-  a{
-    letter-spacing: 1px;
-    padding: 4px 0;
-    display: block;
-    font-size: 14px;
-    color: $off-white;
-    &:hover{
-      color: $primary-hover;
-    }
-  }
-  .site-link a{
-    font-size: 16px;
-    padding: 6px 0;
-    font-weight: 600;
-  }
-}
-
-#flash_container{
-  padding: 0;
-  max-width: 1200px;
-  .alert{
-    margin: 0 15px 30px 15px;
-    background: lighten($primary-fade, 16);
-    color: $primary-dark;
-    border-color: saturate(lighten($primary-fade, 12), 20);
-    border-radius: 0;
-    .close{
-      font-size: 25px;
-      color: $primary-color;
-      opacity: 0.6;
-      &:hover{
-        color: $primary-hover;
-      }
-    }
-  }
-  #flash{
-    margin: 0 15px 30px 15px;
-    display: block;
-    padding: 10px 15px;
-    background: $grey-5;
-    color: $white;
-    #flash_close{
-      float: right;
-    }
-  }
-}
-
-.menu-link{
-  width: 45px;
-  height: 45px;
-  background: $primary-color;
-  position: fixed;
-  top: 10px;
-  color: $white;
-  z-index: 10;
-  padding: 9px 10px;
-  @include transition($transition);
-  &:hover{
-    .gcicon{
-      color: $primary-fade;
-    }
-  }
-  .gcicon{
-    color: $white;
-    font-size: 24px;
-  }
-}
-
-.menu-link-left{
-  left: 10px;
-}
-
-#wrapper{
-  background: lighten($off-white, 2%) !important;
-  padding: 65px 0;
-}
-
-.admin-title{
-  margin: 15px 0 45px;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  text-align: center;
-}
-
-.input-group{
-  .form-control, .btn{
-    border-radius: 0;
-  }
-}
-
-.contextual-menu{
-  background: $white;
-  padding: 15px;
-  margin-bottom: 30px;
-  display: flex;
-  align-items: center;
-  .contextual-options{
-    display: flex;
-    align-items: center;
-  }
-  .search {
-    flex: 1; /* take up the rest of the remaining space */
-    order: -1;
-    margin-right: 15px;
-  }
-  .search input {
-    width: 100%;
-  }
-  .btn-link-grey{
-    font-weight: 300;
-    z-index: 60;
-    .gcicon{
-      color: $grey-3;
-    }
-    strong{
-      font-weight: 500;
-    }
-  }
-
-  .dropdown-menu{
-    z-index: 50;
-    top: -2px;
-    padding-top: 33px;
-    border-radius: 0;
-    li{
-      &:first-child{
-        border-top: 1px solid $grey-1;
-        &:hover{
-          border-color: transparent;
-        }
-      }
-      a{
-        padding: 5px 12px;
-        transition: 0;
-        &:hover, &:focus{
-          color: $white;
-          background: $primary-hover;
-          .gcicon{
-            color: $white;
-          }
-        }
-      }
-    }
-    .gcicon{
-      color: $grey-3;
-    }
-  }
-}
-
-@media (max-width: 767px) {
-  .contextual-menu {
-    flex-wrap: wrap;
-    .contextual-options{
-      width: 100%;
-      order: 1;
-      margin-bottom: 15px;
-    }
-    .search {
-      width: 100%;
-      order: 2;
-    }
-  }
-}
-
-
-/* -------------------- PAGES -------------------- */
-
-.login{
-  background: $off-white;
-  padding-top: 90px;
-  @media (max-width: 767px) {
-    padding-top: 45px;  
-  }
-  .elephant-cms-logo{
-    max-width: 150px;
-  }
-  h2{
-    margin-bottom: 30px;
-  }
-  form{
-    margin-bottom: 120px;
-    .form-group{
-      margin-bottom: 15px;
-    }
-    .checkbox{
-      label{
-        padding-top: 5px;
-      }
-      input[type="checkbox"]{
-        margin-top: 7px;
-      }
-    }
-  }
-}
-
-.admin-index{
-  max-width: 1200px;
-  ul{
-    li{
-      margin-bottom: 0;
-      &:last-of-type{
-        padding-bottom: 0;
-      }
-      .page-row{
-        margin-bottom: 2px;
-        background: $white;
-        padding: 0 15px;
-        display: flex;
-        align-items: center;
-        font-size: 18px;
-        letter-spacing: 1px;
-        color: $grey-6;
-        &:hover{
-          background: $primary-hover;
-          .gcicon{
-            color: $white;
-          }
-          .actions{
-            display: block;
-          }
-          .page-title{
-            color: $white;
-            .label{
-              background: $white;
-              color: $primary-hover;
-            }
-          }
-          .date{
-            display: none;
-          }
-          a.attribute{
-            color: $white;
-            &:hover{
-              text-decoration: underline;
-            }
-          }
-        }
-        .child-toggle{
-          margin-right: 10px;
-          .status-icon{
-            margin-right: 0;
-          }
-        }
-        .status-icon{
-          margin-right: 10px;
-        }
-        .child-toggle{
-          .gcicon-folder{
-            display: none;
-          }
-          .gcicon-folder-open{
-            display: inline-block;
-          }
-        }
-        .child-toggle.collapsed{
-          .gcicon-folder{
-            display: inline-block;
-          }
-          .gcicon-folder-open{
-            display: none;
-          }
-        }
-        .page-title{
-          flex: 1;
-          display: flex;
-          padding: 10px 0;
-          transition: 0;
-          color: $grey-6;
-          .title{
-            flex: 1;
-          }
-          .label{
-            background: $grey-3;
-            text-transform: capitalize;
-            padding: 2px 8px;
-            font-weight: 600;
-            margin-left: 5px;
-          }
-        }
-        .attribute{
-          padding-right: 60px;
-        }
-        .date{
-          font-size: 14px;
-          display: block;
-          width: 100px;
-          text-align: right;
-          color: $grey-5;
-        }
-        .actions{
-          text-align: right;
-          display: none;
-          width: 100px;
-          .circle-icon{
-            color: $white;
-            border-color: $white;
-            &:link, &:visited {
-              color: $white;
-            }
-            &:hover, &:focus{
-              color: $white;
-              border-color: $primary-dark;
-              background: $primary-dark;
-            }
-          }
-          span{
-            width: 30px;
-            text-align: center;
-            display: inline-block;
-            margin-left: 5px;
-          }
-        }
-      }
-    }
-    /* nested ul */
-    ul{
-      list-style: outside none none;
-      margin: 0 0 0 0;
-      padding: 0;
-      &:empty{
-        margin: 0;
-      }
-      li {
-        margin-bottom: 0;
-        margin-left: 30px;
-        .page-row{
-          background: lighten($off-white, 4%);
-        }
-      }
-      li .page-row{
-        padding-left: 30px;
-        margin-left: -30px;
-      }
-      li li .page-row{
-        padding-left: 45px;
-        margin-left: -60px;
-      }
-      li li li .page-row{
-        padding-left: 60px;
-        margin-left: -90px;
-      }
-      li li li li .page-row{
-        padding-left: 75px;
-        margin-left: -120px;
-      }
-      li li li li li .page-row{
-        padding-left: 90px;
-        margin-left: -150px;
-      }
-      li li li li li li .page-row{
-        padding-left: 105px;
-        margin-left: -180px;
-      }
-      li.placeholder{
-        padding-left: 30px;
-        margin-left:  0px;
-      }
-      li li.placeholder{
-        padding-left: 60px;
-        margin-left: -30px;
-      }
-      li li li.placeholder{
-        padding-left: 90px;
-        margin-left: -60px;
-      }
-      li li li li.placeholder{
-        padding-left: 120px;
-        margin-left: -90px;
-      }
-      li li li li li.placeholder{
-        padding-left: 150px;
-        margin-left: -90px;
-      }
-      li li li li li li.placeholder{
-        padding-left: 180px;
-        margin-left: -120px;
-      }
-    }
-  }
-  .placeholder{
-    border: 1px dashed #CCC;
-    background: lighten($off-white, 4%);
-    height: 50px;
-    margin-bottom: 2px;
-    padding: 10px 0;
-    box-sizing: border-box;
-    &:after{
-      content: 'Move Here';
-      padding-left: 21px;
-    }
-  }
-}
-
-
-
-/* -------------------- SIDEBARS -------------------- */
-
-#sidebar-left{
-  background: $off-white;
-  border-right: 1px solid $grey-2;
-  padding: 0;
-  .site-name{
-    text-align: right;
-    background: $grey-1;
-    width: 100%;
-    padding: 18px 15px;
-    z-index: 10000;
-    position: fixed;
-    top: 0;
-    a{
-      color: $grey-6;
-      font-size: 21px;
-      font-weight: 600;
-      &:hover{
-        color: $primary-dark;
-      }
-    }
-  }
-  .log-out{
-    background: darken($off-white, 3%);
-    display: flex;
-    position: fixed;
-    justify-content: space-between;
-    bottom: 0;
-    width: 100%;
-    padding: 9px 15px;   
-    color: $grey-6;
-    font-size: 16px;
-    font-weight: 600;
-    align-items: center;
-    &:hover{
-      background: $primary-hover;
-      color: $white;
-    }
-  }
-  #sidebar-left-inner{
-    top: 65px;
-    height: calc(100% - 110px);
-    overflow-y: scroll;
-    overflow-x: hidden;
-    padding-bottom: 15px;
-    li{
-      margin: 0 0 1px;
-      .gcicon{
-        margin-right: 4px;
-        color: $grey-6;
-      }
-      a{
-        padding: 10px 15px 6px;
-        width: 100%;
-        display: block;
-        color: $grey-6;
-        font-size: 16px;
-        letter-spacing: 1px;
-        text-decoration: none;
-        @include transition(0.1s);
-        font-weight: 400;
-        text-transform: uppercase;
-        &:hover{
-          border-bottom: 0;
-          background: $white-opaque;
-          color: $primary-dark;
-          .gcicon{
-            color: $primary-dark;
-          }
-        }
-      }
-      .active{
-        border-right: 2px solid $primary-color;
-        background: lighten($off-white, 6%);
-      }
-      ul{
-        padding-top: 1px;
-        margin-bottom: 10px;
-        li{
-          a{
-            padding: 4px 15px 4px 30px;
-            font-size: 13px;
-            font-weight: 400;
-            background: lighten($off-white, 3%);
-          }
-        }
-      }
-    }
-    .list-heading{
-      padding: 10px 15px 6px 30px;
-      font-weight: 600;
-      font-size: 14px;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      background: darken($white-opaque, 3%);
-      .gcicon{
-        margin-right: 8px;
-      }
-    }
-  }
-}
-
-#sidebar-right{
-  height: 100%;
-  width: 230px;
-  position: fixed;
-  top: 0;
-  right: 0;
-  #sidebar-right-inner{
-    background: $off-white;
-    width: 230px;
-    height: 100%;
-    margin-left: -15px;
-    padding: 15px 0 60px;
-    border-left: 1px solid $grey-2;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    .page-options{
-      padding: 0 15px;
-      *[contenteditable=true]{
-        color: $primary-dark;
-        border-bottom: 1px solid transparent;
-        &:focus{
-          border-color: $primary-dark;
-          outline: none;
-        }
-        &:empty{
-          width: 15px;
-          border-color: $primary-dark;
-        }
-      }
-      .deliver{
-        margin-bottom: 15px;
-        display: block;
-        margin-left: 0;
-        margin-right: 0;
-        .save-page{
-          margin-right: 5px;
-        }
-      }
-      .page-title{
-        font-size: 21px;
-        font-weight: 600;
-        display: inline-block;
-      }
-      .url{
-        font-weight: 600;
-        color: $grey-5;
-        margin-bottom: 30px;
-        span{
-          padding-bottom: 1px;
-        }
-      }
-      .status{
-        margin-bottom: 30px;
-        ul{
-          li{
-            margin-bottom: 4px;
-            padding-bottom: 6px;
-            border-bottom: 1px solid $grey-2;
-            &:last-of-type{
-              border-bottom: none;
-            }
-            .gcicon{
-              width: 20px;
-              display: inline-block;
-            }
-            .password-protect{
-              color: $black;
-              width: 100%;
-              display: block;
-              text-align: left;
-              &:hover{
-                color: $primary-dark;
-              }
-              .gcicon-down{
-                top: 2px;
-                font-size: 18px;
-                line-height: 14px;
-                float: right;
-              }
-            }
-            .password-collapse{
-              padding: 10px 0 5px 0;
-            }
-            .checkbox{
-              margin: 0;
-              height: 19px;
-              label{
-                width: 100%;
-                display: block;
-                padding-top: 2px;
-              }
-            }
-          }
-          .saved-state{
-            color: $grey-6;
-          }
-        }
-      }
-      .settings-toggle{
-        display: block;
-        margin-bottom: 10px;
-        color: $grey-6;
-        font-size: 16px;
-        &:hover{
-          color: $primary-dark;
-        }
-      }
-      .settings-collapse{
-        .dropdown-wrapper{
-          margin-bottom: 10px;
-        }
-      }
-      .delete{
-        color: $red;
-        &:hover{
-          color: darken($red, 15%);
-        }
-      }
-    }
-  }
-}
-
-.reordering{
-  .page-row{
-    &:hover{
-      
-    }
-    .actions{
-      display: none !important;
-    }
-  }
-}
-
-
-
-/* -------------------- EDITOR -------------------- */
-
-*[contenteditable=true]{
- white-space: pre-wrap; 
-}
-
-.input-group{
-  .input-group-addon{
-    background: $off-white;
-    border-color: $grey-2;
-  }
-  .form-control{
-    border-color: $grey-2;
-  }
-}
-
-#page-preview{
-  *[contenteditable=true]{
-      border-left: 2px solid transparent;
-      padding-left: 15px;
-      margin-left: -17px;
-      border-right: 2px solid transparent;
-      padding-right: 15px;
-      margin-right: -17px;
-    &:focus{
-      outline: none;
-      border-color: $primary-fade !important;
-    }
-    &:hover{
-      border-color: rgba($primary-fade, 0.3);
-    }
-  }
-  .new-module{
-    display: block;
-    clear: both;
-    padding-top: 15px;
-    margin-bottom: 15px;
-    a{
-      text-align: center;
-      overflow: hidden;
-      float: left;
-      margin: 0 5px 0 0;
-    }
-    .add-module{
-      .gcicon{
-        top: 1px;
-      }
-    }
-    .media-type{
-      .gcicon{
-        font-size: 14px;
-      }
-    }
-  }
-  .media-chooser{
-    .add-module{
-      margin-right: 20px; 
-      color: $grey-5;
-      border-color: $grey-5;
-      &:hover{
-        color: $white;
-        border-color: $primary-dark;
-      }
-      .gcicon{
-        @include rotate(45deg);
-      }
-    }
-    .media-type{
-    }
-    .form-group{
-      margin: 0;
-      .input-group{
-        top: -1px;
-        .form-control{
-          width: 300px;
-        }
-      }
-    }
-  }
-  
-  .highlight-editor{
-    background: $off-white;
-    border: 1px solid $grey-2;
-    @include border-radius($radius);
-    display: inline-block;
-    padding: 5px 10px;
-    &:after{
-      content: "";
-      position: absolute;
-      bottom: -7px;
-      left: 50%;
-      margin-left: -7px;
-      border-style: solid;
-      border-width: 7px 7px 0 7px;
-      border-color: $off-white transparent transparent transparent;
-    }
-    &:before{
-      content: "";
-      position: absolute;
-      bottom: -8px;
-      left: 50%;
-      margin-left: -8px;
-      border-style: solid;
-      border-width: 8px 8px 0 8px;
-      border-color: $grey-2 transparent transparent transparent;
-    }
-    a{
-      margin: 0 5px;
-      color: $grey-6;
-      &:hover{
-        color: $primary-dark;
-      }
-    }
-  }
-}
-
-
-
-
-
-
-
-.settings{
-  background: $off-white;
-  border-left: 1px solid $grey-1;
-  position: fixed !important;
-  right: 0;
-}
-
-#page-preview{
-  header#header{
-  }
-  .navbar-fixed-top{
-    position: absolute;
-    top: 40px;
-  }
-  .page-preview-content{
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-}
-
-
-
-
-
-/**** Tooltip Icons *****/
-.tooltip {
-  background: #22a7f2;
-  border: 1px solid #1b82bd;
-  word-wrap:break-word;
-  span {
-    display: block;
-    padding: 10px;
-    border: 1px solid #62c1f6;
-  }
-}
-.tooltip-nib {
-  position: absolute;
-  z-index: 10001;
-}
-.tooltip, .tooltip * {
-  color: white;
-}
-.tooltip, .tooltip span {
-  @include border-radius($radius);
-}
+@import "config/variables";
+@import "glass/manifest";
