--- a/app/views/refinery/admin/_head.html.erb
+++ b/app/views/refinery/admin/_head.html.erb
@@ -1,6 +1,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <title>Elephant - <%= Refinery::Core.site_name -%></title>
 <%= csrf_meta_tags %>
+
+<%= stylesheet_link_tag current_refinery_user.org.present? ? "refinery-glass-#{current_refinery_user.org.slug}" : "refinery-glass" %>
+
 <%#= stylesheet_link_tag 'refinery/refinery' %>
 <% custom_stylesheets.each do |css| %>
   <%= stylesheet_link_tag css.path, css.options %>
