--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -33,9 +33,9 @@
         <% else %>
           <!-- this is just to display legacy, so we'll grab legacy css -->
           <%= stylesheet_link_tag 'refinery/refinery' %>
-          <div id="page_container">
-            <div id="page">
-              <div id="content" class="clearfix">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12">
                 <%= yield %>
               </div>
             </div>
