--- a/app/views/refinery/admin/_form_actions.html.erb
+++ b/app/views/refinery/admin/_form_actions.html.erb
@@ -43,7 +43,7 @@
     <%= submit_tag submit_button_text,
                    :id => submit_button_id,
                    :name => nil,
-                   :class => "wymupdate btn btn-primary btn-lg",
+                   :class => "btn btn-primary btn-lg",
                    :tooltip => submit_button_title unless hide_submit %>
 
     <%= render '/refinery/admin/continue_editing', :f => f if continue_editing -%>
@@ -54,11 +54,9 @@
     <%= link_to(cancel_button_text, cancel_url,
                 :title => cancel_title,
                 :id => cancel_button_id,
-                :class => "close_dialog button") unless hide_cancel %>
+                :class => "btn btn-default btn-lg") unless hide_cancel %>
 
     <%= local_assigns[:after_cancel_button] -%>
-  </div>
-  <div class='form-actions-right'>
     <%= local_assigns[:before_delete_button] -%>
     <%= link_to(delete_button_text, delete_url,
                 :title => delete_title,
@@ -67,7 +65,7 @@
                 :data => {
                   :confirm => delete_confirmation
                 },
-                :class => "button confirm-delete") unless hide_delete %>
+                :class => "btn btn-default btn-lg") unless hide_delete %>
     <%= local_assigns[:after_delete_button] -%>
   </div>
 </div>
