--- a/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
+++ b/lib/generators/refinery/glass_engine/templates/app/views/refinery/namespace/admin/plural_name/_form.html.erb
@@ -3,56 +3,64 @@
 <%
   text_areas = attributes.reject{|a| a.field_type.to_s != 'text_area'}
   generated_text_areas = false
+  image_attributes = []
+  attributes.each_with_index do |attribute, index|
+    if attribute.type.to_s == 'image'
+      image_attributes.push(attribute.name)
+    end
+  end
 -%>
-<%%= form_for [refinery, :<%= namespacing.underscore %>_admin, @<%= singular_name %>] do |f| -%>
+<%%= form_for [refinery, :<%= namespacing.underscore %>_admin, @<%= singular_name %>], html:
+<%= image_attributes.any? ? {'data-model' => singular_name , class: 'form-with-image', 'data-field-name' => image_attributes.first} : {} %> do |f| -%>
   <%%= render '/refinery/admin/error_messages',
               :object => @<%= singular_name %>,
               :include_object_name => true %>
 
-<% if localized? -%>
-  <%%= render '/refinery/admin/locale_picker',
-              :current_locale => Globalize.locale %>
-<% end -%>
-<% attributes.each_with_index do |attribute, index| -%>
-<% if attribute.type.to_s == 'image' -%>
-  <div class='field'>
-    <%%= f.label :<%= attribute.name %> -%>
-    <%%= render '/refinery/admin/image_picker',
-               :f => f,
-               :field => :<%= "#{attribute.name}_id".gsub("_id_id", "_id") %>,
-               :image => @<%= singular_name %>.<%= attribute.name.gsub("_id", "") %>,
-               :toggle_image_display => false -%>
-  </div>
+  <% if localized? -%>
+    <%%= render '/refinery/admin/locale_picker',
+                :current_locale => Globalize.locale %>
+  <% end -%>
+  <% attributes.each_with_index do |attribute, index| -%>
+  <% if attribute.type.to_s == 'image' -%>
 
-<% elsif attribute.type.to_s == 'resource' -%>
-  <div class='field'>
-    <%%= f.label :<%= attribute.name %> -%>
-    <%%= render '/refinery/admin/resource_picker',
-               :f => f,
-               :field => :<%= "#{attribute.name}_id".gsub("_id_id", "_id") %>,
-               :resource => @<%= singular_name %>.<%= attribute.name.gsub("_id", "") %> -%>
-  </div>
+    <div class='field'>
+      <%%= render '/refinery/admin/images/image_input',
+                 :f => f,
+                 :model => @<%= singular_name %>,
+                 :model_name => '<%= singular_name %>',
+                 :field_name => '<%= image_attributes.first %>'.to_sym
+      -%>
+    </div>
 
-<% elsif attribute.field_type.to_s == "text_area" and !generated_text_areas -%>
-  <div class='field'>
-    <%%= render '/refinery/admin/wysiwyg',
-                :f => f,
-                :fields => <%= text_areas.map{|t| t.name.to_sym}.inspect -%>,
-                :object => "<%= namespacing.underscore -%>/<%= singular_name -%>" -%>
-  </div>
+  <% elsif attribute.type.to_s == 'resource' -%>
+    <div class='field'>
+      <%%= f.label :<%= attribute.name %> -%>
+      <%%= render '/refinery/admin/resource_picker',
+                 :f => f,
+                 :field => :<%= "#{attribute.name}_id".gsub("_id_id", "_id") %>,
+                 :resource => @<%= singular_name %>.<%= attribute.name.gsub("_id", "") %> -%>
+    </div>
 
-<% generated_text_areas = true -%>
-<% elsif attribute.field_type.to_s != 'text_area' -%>
-  <div class='field'>
-    <%%= f.label :<%= attribute.name %> -%>
-    <%%= f.<%= attribute.field_type -%> :<%= attribute.name -%><%= ", :class => 'larger widest'" if (index == 0 && attribute.field_type == :text_field) -%><%= ", :checked => @#{singular_name}[:#{attribute.name}]" if attribute.field_type == :check_box %> -%>
-  </div>
+  <% elsif attribute.field_type.to_s == "text_area" and !generated_text_areas -%>
+    <div class='field'>
+      <%%= render '/refinery/admin/wysiwyg',
+                  :f => f,
+                  :fields => <%= text_areas.map{|t| t.name.to_sym}.inspect -%>,
+                  :object => "<%= namespacing.underscore -%>/<%= singular_name -%>" -%>
+    </div>
 
-<% end -%>
+  <% generated_text_areas = true -%>
+  <% elsif attribute.field_type.to_s != 'text_area' -%>
+    <div class='field'>
+      <%%= f.label :<%= attribute.name %> -%>
+      <%%= f.<%= attribute.field_type -%> :<%= attribute.name -%><%= ", :class => 'larger widest'" if (index == 0 && attribute.field_type == :text_field) -%><%= ", :checked => @#{singular_name}[:#{attribute.name}]" if attribute.field_type == :check_box %> -%>
+    </div>
+
+  <% end -%>
 <% end -%>
   <%%= render '/refinery/admin/form_actions', :f => f,
              :continue_editing => false,
-             :delete_title => t('delete', :scope => 'refinery.<%= plural_name %>.admin.<%= plural_name %>.<%= singular_name %>'),
+             :delete_title => t('delete', :scope => 'refinery.<%= namespacing %>.admin.<%= plural_name %>.<%= singular_name %>'),
              :delete_confirmation => t('message', :scope => 'refinery.admin.delete'<% if (title = attributes.detect { |a| a.type.to_s == "string" }).present? %>, :title => @<%= singular_name %>.<%= title.name %><% end %>) -%>
 <%% end -%>
 <% if text_areas.any? -%>
@@ -65,3 +73,8 @@
   </script>
 <%% end -%>
 <% end -%>
+
+<% if image_attributes.any? %>
+  <%%= render 'refinery/admin/images/form',
+              :attribute_name => '<%= image_attributes.first %>' -%>
+<% end %>
