--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -110,6 +110,13 @@ p::-moz-selection {
     clear: both;
 }
 
+.list-flex{
+  display: flex;
+  li{
+    flex: 1;
+  }
+}
+
 
 /* -------------------- ELEMENTS -------------------- */
 
