--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -43,7 +43,7 @@ html
   <body class="<%= action_name %> <%= I18n.locale %>">
 
     <section id="sidebar-left" class="ui sidebar overlay">
-      <div class="sidebar-top-nav">
+      <div class="sidebar-top-nav site-name">
         <a href="" class="sidebar-left-opener menu-link menu-link-left"><i class="gcicon gcicon-cancel"></i></a> <%= link_to Refinery::Core.site_name, '/' %>
       </div>
       <div id="sidebar-left-inner">
