--- a/app/assets/stylesheets/glass/_images.scss
+++ b/app/assets/stylesheets/glass/_images.scss
@@ -17,12 +17,14 @@ form div.upload div.file-preview {
 }
 
 #progress-box {
-  margin-top: 5px;
   padding: 1px;
-  width: 300px;
   display: none;
   text-align:left;
-  float: left;
+  position: absolute;
+  z-index: 100;
+  bottom: 10px;
+  width: 270px;
+  left: 15px;
 }
 #progress-bar {
   height: 20px;
@@ -30,9 +32,11 @@ form div.upload div.file-preview {
   width: 1%;
 }
 #status-text {
-  top: 3px;
+  top: 2px;
   left: 50%;
-  position:absolute;
-  display:inline-block;
+  margin-left: -15px;
+  width: 50px;
+  text-align: center;
+  position: absolute;
   color: #000000;
 }
