--- a/app/assets/stylesheets/glass/_base.scss
+++ b/app/assets/stylesheets/glass/_base.scss
@@ -201,8 +201,10 @@ body{
     order: -1;
     margin-right: 15px;
   }
-  .search input {
+  .search input{
     width: 100%;
+    height: 37px;
+    line-height: 1.2;
   }
   .btn-link-grey{
     font-weight: 300;
