--- a/app/assets/stylesheets/glass/_manifest.scss
+++ b/app/assets/stylesheets/glass/_manifest.scss
@@ -13,6 +13,7 @@
 @import "glass/images";
 @import "canvas/sidebar";
 @import "canvas/dimmer";
+@import "canvas/loader";
 @import "canvas/modal";
 @import "canvas/transition";
 @import "canvas/cropper";
