--- a/app/assets/stylesheets/canvas/config/_base.scss
+++ b/app/assets/stylesheets/canvas/config/_base.scss
@@ -342,6 +342,36 @@ a.pill{
   }
 }
 
+.corner-label{
+  top: 0;
+  right: 0;
+  z-index: 100;
+  font-size: .75em;
+  border-radius: 0 $radius-double 0 0;
+  border-color: #e8e8e8;
+  position: absolute;
+color: rgba(0,0,0,.6);
+  &:after{
+    position: absolute;
+    content: "";
+    right: 0;
+    top: 0;
+    z-index: -1;
+    width: 0;
+    height: 0;
+    background-color: transparent !important;
+    border-top: 0 solid transparent;
+    border-right: 3.25em solid transparent;
+    border-bottom: 3.25em solid transparent;
+    border-left: 0 solid transparent;
+    border-right-color: inherit;
+    -webkit-transition: border-color .2s ease;
+    transition: border-color .2s ease;
+  }
+  span{
+    transform: rotate(45deg);
+  }
+}
 
 
 /* -------------------- TYPOGRAPHY -------------------- */
